# geoarrow-python

./: .gitignore  .pre-commit-config.yaml  README.ipynb  README.md  index.html  pyproject.toml  test.parquet
.github/workflows/: docs.yaml  pre-commit.yaml  test.yaml
docs/: README.md  requirements.txt
docs/source/: .gitignore  conf.py  index.rst  pandas.rst  pyarrow.rst
geoarrow-metapackage/: README.md  pyproject.toml
geoarrow-pandas/: pyproject.toml
geoarrow-pandas/src/geoarrow/pandas/: __init__.py  lib.py
geoarrow-pandas/tests/: test_geoarrow_pandas.py  test_geoarrow_pandas_geopandas.py  test_geoarrow_pandas_suite.py
geoarrow-pyarrow/: pyproject.toml
geoarrow-pyarrow/src/geoarrow/pyarrow/: __init__.py  _array.py  _compute.py  _dataset.py  _kernel.py  _scalar.py  _type.py  dataset.py  geoparquet.py  io.py
geoarrow-pyarrow/tests/: test_compute.py  test_dataset.py  test_geopandas.py  test_io.py  test_pyarrow.py
geoarrow-types/: pyproject.toml
geoarrow-types/src/geoarrow/types/: __init__.py  constants.py  crs.py  type_base.py  type_pyarrow.py  type_spec.py
geoarrow-types/tests/: test_constants.py  test_crs.py  test_package.py  test_type_base.py  test_type_pyarrow.py  test_type_spec.py
geoarrow/core/array/: __init__.py  point.py
geoarrow/shapely/: README.md  pyproject.toml
geoarrow/shapely/geoarrow/shapely/: __init__.py  extension_array.py  extension_scalar.py  extension_types.py  geopandas_interop.py
geoarrow/shapely/tests/: test_linestring.py  test_multilinestring.py  test_multipoint.py  test_multipolygon.py  test_point.py  test_polygon.py
main/: genindex.html  index.html  objects.inv  pandas.html  py-modindex.html  pyarrow.html  search.html  searchindex.js
main/_sources/: index.rst.txt  pyarrow.rst.txt
