[tool.poetry]
name = "geoarrow.core"
version = "0.1"
description = "Core classes for GeoArrow in Python"
authors = []
readme = "README.md"
packages = [
  { include = "core", from = "geoarrow" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^12.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
