
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "geoarrow-pyarrow"
dynamic = ["version"]
description = ""
authors = [{name = "Dewey Dunnington", email = "dewey@dunnington.ca"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["pyarrow >= 14.0.2", "geoarrow-types >= 0.3.0", "geoarrow-c >= 0.3.0"]

[project.optional-dependencies]
test = ["pytest", "pandas", "numpy", "geopandas", "pyogrio", "pyproj"]

[project.urls]
homepage = "https://geoarrow.org"
repository = "https://github.com/geoarrow/geoarrow-python"

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
tag_regex = "geoarrow-pyarrow-([0-9]+.[0-9]+.[0-9]+)"
git_describe_command = "git describe --long --match='geoarrow-pyarrow-*'"
version_file = "src/geoarrow/pyarrow/_version.py"

[tool.pytest.ini_options]
consider_namespace_packages = true
