[tool.poetry]
name = "geoarrow.shapely"
version = "0.1"
description = "Interop between GeoArrow and Shapely geometries in Python"
authors = []
readme = "README.md"
packages = [
  { include = "shapely", from = "geoarrow" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
